mmware_pi/ros2scripts/first_pubsub/log/build_2020-08-12_00-54-36/py_pubsub/stderr.log
  File "/home/soumya/mmware_mmwareserver/ros2/ros2scripts/first_pubsub/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/ros2_kafka_bridge_pub.py", line 42
    self.get_logger().info('Publishing: "%s"' msg["plumber"])
                                              ^
SyntaxError: invalid syntax

